k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
# apiVersion: networking.k8s.io/v1beta1
# # UPDATE THE API
# kind: Ingress
# metadata:
#   name: ingress-service
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/use-regex: 'true'
#     # ADD THIS LINE ABOVE
#     nginx.ingress.kubernetes.io/rewrite-target: /$1
#     # UPDATE THIS LINE ABOVE
# spec:
#   rules:
#     - http:
#         paths:
#           - path: /?(.*)
#           # UPDATE THIS LINE ABOVE
#             backend:
#               serviceName: client-cluster-ip-service
#               servicePort: 3000
#           - path: /api/?(.*)
#           # UPDATE THIS LINE ABOVE
#             backend:
#               serviceName: server-cluster-ip-service
#               servicePort: 5000
